src/controls/Private/qquickcalendarmodel_p.h
@@ -75,7 +75,7 @@ public:
 
     QHash<int, QByteArray> roleNames() const Q_DECL_OVERRIDE;
 
-    Q_INVOKABLE QDate dateAt(int index) const;
+    Q_INVOKABLE QDateTime dateAt(int index) const;
     Q_INVOKABLE int indexAt(const QDate &visibleDate);
     Q_INVOKABLE int weekNumberAt(int row) const;
 
