tests/auto/controls/data/tst_calendar.qml
@@ -129,7 +129,10 @@ Item {
 
             compare(calendar.minimumDate, new Date(1, 0, 1));
             compare(calendar.maximumDate, new Date(4000, 0, 1));
-            compare(calendar.selectedDate, new Date(new Date().setHours(0, 0, 0, 0)));
+            var expectedDate = new Date();
+            compare(calendar.selectedDate.getFullYear(), expectedDate.getFullYear());
+            compare(calendar.selectedDate.getMonth(), expectedDate.getMonth());
+            compare(calendar.selectedDate.getDate(), expectedDate.getDate());
             compare(calendar.frameVisible, true);
             compare(calendar.dayOfWeekFormat, Locale.ShortFormat);
             compare(calendar.__locale, Qt.locale());
@@ -406,7 +409,9 @@ Item {
                     expectedDate.setDate(expectedDate.getDate() + cellIndex);
 
                     mousePress(calendar, toPixelsX(day), toPixelsY(week), Qt.LeftButton);
-                    compare(calendar.selectedDate, expectedDate);
+                    compare(calendar.selectedDate.getFullYear(), expectedDate.getFullYear());
+                    compare(calendar.selectedDate.getMonth(), expectedDate.getMonth());
+                    compare(calendar.selectedDate.getDate(), expectedDate.getDate());
                     compare(calendar.__panel.pressedCellIndex, cellIndex);
                     compare(pressedSignalSpy.count, 1);
                     compare(releasedSignalSpy.count, 0);
@@ -434,7 +439,9 @@ Item {
             // Ensure released event does not trigger date selection.
             calendar.selectedDate = startDate;
             mousePress(calendar, toPixelsX(1), toPixelsY(0), Qt.LeftButton);
-            compare(calendar.selectedDate, new Date(2012, 11, 31));
+            compare(calendar.selectedDate.getFullYear(), 2012);
+            compare(calendar.selectedDate.getMonth(), 11);
+            compare(calendar.selectedDate.getDate(), 31);
             compare(calendar.__panel.pressedCellIndex, 1);
             compare(pressedSignalSpy.count, 1);
             compare(releasedSignalSpy.count, 0);
@@ -445,7 +452,9 @@ Item {
             clickedSignalSpy.clear();
 
             mouseRelease(calendar, toPixelsX(1), toPixelsY(0), Qt.LeftButton);
-            compare(calendar.selectedDate, new Date(2012, 11, 31));
+            compare(calendar.selectedDate.getFullYear(), 2012);
+            compare(calendar.selectedDate.getMonth(), 11);
+            compare(calendar.selectedDate.getDate(), 31);
             compare(calendar.__panel.pressedCellIndex, -1);
             compare(pressedSignalSpy.count, 0);
             compare(releasedSignalSpy.count, 1);
@@ -534,7 +543,9 @@ Item {
             calendar.__locale = Qt.locale("en_GB");
             calendar.selectedDate = new Date(2014, 11, 1);
             mousePress(calendar, toPixelsX(0), toPixelsY(0), Qt.LeftButton);
-            compare(calendar.selectedDate, new Date(2014, 10, 24));
+            compare(calendar.selectedDate.getFullYear(), 2014);
+            compare(calendar.selectedDate.getMonth(), 10);
+            compare(calendar.selectedDate.getDate(), 24);
             mouseRelease(calendar, toPixelsX(0), toPixelsY(0), Qt.LeftButton);
         }
 
@@ -585,7 +596,9 @@ Item {
 
         function dragTo(cellX, cellY, expectedCellIndex, expectedDate) {
             mouseMove(calendar, toPixelsX(cellX), toPixelsY(cellY));
-            compare(calendar.selectedDate, expectedDate);
+            compare(calendar.selectedDate.getFullYear(), expectedDate.getFullYear());
+            compare(calendar.selectedDate.getMonth(), expectedDate.getMonth());
+            compare(calendar.selectedDate.getDate(), expectedDate.getDate());
             compare(calendar.__panel.pressedCellIndex, expectedCellIndex);
             compare(hoveredSignalSpy.count, 1);
             compare(pressedSignalSpy.count, 1);
@@ -627,7 +640,9 @@ Item {
                  3   4   5   6   7   8   9            3   4   5   6   7   8   9 */
 
             mousePress(calendar, toPixelsX(5), toPixelsY(0), Qt.LeftButton);
-            compare(calendar.selectedDate, new Date(2014, 1, 1));
+            compare(calendar.selectedDate.getFullYear(), 2014);
+            compare(calendar.selectedDate.getMonth(), 1);
+            compare(calendar.selectedDate.getDate(), 1);
             compare(calendar.__panel.pressedCellIndex, 5);
             compare(pressedSignalSpy.count, 1);
             compare(releasedSignalSpy.count, 0);
